--- a/THANKS
+++ b/THANKS
@@ -6,6 +6,7 @@ Karl Berry <kb@cs.umb.edu>
 Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
 Thomas Esser <te@informatik.uni-hannover.de>
+Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Tom Tromey <tromey@cygnus.com>
 Ulrich Drepper <drepper@ipd.info.uni-karlsruhe.de>
 Volker Kuhlmann <kuhlmav@elec.canterbury.ac.nz>
