--- a/TODO
+++ b/TODO
@@ -1,32 +1,38 @@
 For 1.0:
 
-* Give some hints for languages other than C, such as C++, Fortran,
-and preprocessed assembler.  There are beginnings of this in the
-manual (Other Languages).
-
 * Finish documenting shared library systems.  Ugh.  I'll need more
 primary documentation in order to do this well.
 
+For 1.1:
+
+* Write libtool not to be dependent on the compiler used to configure
+it.
+
+* Implement full multi-language support.  There are beginnings of this
+in the manual (Other Languages).
+
 Sometime in the future (maybe):
+
+* Implement `-static' linking against installed libraries, even when
+the OS does not have static system libraries.  This would need to be
+done by parsing `-L' and `-l', searching for libNAME.a manually, and
+adding the full path to it.
 
 * Implement full support for other basic library types (libhello_g,
 libhello_p).  Make these types configurable.  Some thinking will have
 to be done about the defaults, and what libhello (standard type)
 should be.
 
-Unfortunately, if we do this, we're back to the pre-0.6
-one-directory-per-object type.  Maybe we should just add an autoconf
-macro and get creative with program_transform_name, or something.
+Maybe we should just add an autoconf macro and get creative with
+program_transform_name, or something.  These changes should be
+partially driven by the needs of packaging tools, such as RPM and
+dpkg.
 
-* Add support for windoze DLL's, and maybe old Linux jumptable
-libraries.  Check out Lesstif and Tcl configuration again.
+* Add support for windoze DLL's.  Check out Lesstif and Tcl
+configuration again.
 
 * What should be done about the difference between -fpic and -fPIC?
 Probably nothing.
 
 * GCC docs imply that all rs6000 code is PIC.  See if it is really
 true of any other processors: at least powerpc, powerpcle.
-
-* Maybe choosing between ln -s and cp -p should be done in ltconfig,
-not ltmain.sh?  Maybe we should avoid it entirely, and just create
-timestamp .lo files, with the PIC objects in .libs/*.o.
