--- a/README
+++ b/README
@@ -26,6 +26,8 @@ See the file NEWS for a description of recent changes to libtool.
 
 See the file INSTALL for instructions on how to build and install libtool.
 
+See the file README-automake for details on Automake support for libtool.
+
 If you have any suggestions or bug reports, or you wish to port libtool
 to a new platform, please send electronic mail to Gord Matzigkeit
 <gord@gnu.ai.mit.edu>.
