--- a/THANKS
+++ b/THANKS
@@ -1,12 +1,13 @@
 Libtool would not be what it is today without the invaluable help of
 these people:
 
+Bruno Haible <haible@ilog.fr>
+Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Joel Cannon <cannon@alpha.centenary.edu>
 Karl Berry <kb@cs.umb.edu>
 Mimi Burbank <mimi@scri.fsu.edu>
 Oliver Guntermann <og@informatik.uni-hannover.de>
 Thomas Esser <te@informatik.uni-hannover.de>
-Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Tom Tromey <tromey@cygnus.com>
 Ulrich Drepper <drepper@ipd.info.uni-karlsruhe.de>
 Volker Kuhlmann <kuhlmav@elec.canterbury.ac.nz>
