--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -95,6 +95,7 @@ version @value{VERSION}.
 * Library Tips::                Tips for library interface design.
 * Other Languages::             Using libtool without a C compiler.
 * Maintaining::                 Information used by the libtool maintainer.
+* Troubleshooting::             When libtool doesn't work as advertised.
 * Index::                       Index of concepts, variables, and programs.
 
  --- The Detailed Node Listing ---
@@ -158,6 +159,7 @@ Using Libtool with Other Languages
 Maintainance Notes for Libtool
 
 * New Ports::                   How to port libtool to new systems.
+* Tested Platforms::            When libtool was last tested.
 * Platform Quirks::             Information about different library systems.
 * libtool Script Contents::     Configuration information that libtool uses.
 
@@ -168,6 +170,16 @@ Platform Quirks
 * Shared Libraries::            Shared library implementations.
 * Archivers::                   Programs that create static archives.
 * Strip::                       Removing unnecessary linkage information.
+
+Troubleshooting
+
+* Libtool Test Suite::          Libtool's self-tests.
+* Reporting Bugs::              How to report problems with libtool.
+
+The Libtool Test Suite
+
+* Test Descriptions::           The contents of the test suite.
+* When Tests Fail::             What to do when a test fails.
 @end menu
 
 @end ifinfo
@@ -1705,10 +1717,7 @@ libtool, you may still be able to use it with libtool.
 
 FIXME tell how to skip the libtool --mode=compile stage and keep going
 
-If all else fails, send electronic mail to @value{MAINT}, and ask for
-help in adding support for your language.
-
-@node Maintaining, Index, Other Languages, Top
+@node Maintaining, Troubleshooting, Other Languages, Top
 @comment  node-name,  next,  previous,  up
 @chapter Maintainance Notes for Libtool
 
@@ -1718,11 +1727,12 @@ porting libtool to new systems, or writing your own libtool.
 
 @menu
 * New Ports::                   How to port libtool to new systems.
+* Tested Platforms::            When libtool was last tested.
 * Platform Quirks::             Information about different library systems.
 * libtool Script Contents::     Configuration information that libtool uses.
 @end menu
 
-@node New Ports, Platform Quirks, Maintaining, Maintaining
+@node New Ports, Tested Platforms, Maintaining, Maintaining
 @comment  node-name,  next,  previous,  up
 @section Porting libtool to New Systems
 
@@ -1752,7 +1762,23 @@ Some systems have special documentation on how to build and install
 shared libraries.
 @end table
 
-@node Platform Quirks, libtool Script Contents, New Ports, Maintaining
+@node Tested Platforms, Platform Quirks, New Ports, Maintaining
+@comment  node-name,  next,  previous,  up
+@section Tested Platforms
+
+This table (the @file{PLATFORMS} file in the libtool distribution)
+describes when libtool was last known to be tested on platforms where it
+claims to support shared libraries:
+
+@example
+@include ../PLATFORMS
+@end example
+
+Libtool versions ending in a single letter (such as @samp{0.7a})
+designate beta releases.  So, @samp{0.7a} comes after public release
+@samp{0.7}, but before @samp{0.8}.
+
+@node Platform Quirks, libtool Script Contents, Tested Platforms, Maintaining
 @comment  node-name,  next,  previous,  up
 @section Platform Quirks
 
@@ -2006,7 +2032,140 @@ of commands that are evaluated one after another.  If any of the
 commands return a nonzero exit status, libtool generally exits with an
 error message.
 
-@node Index,  , Maintaining, Top
+@node Troubleshooting, Index, Maintaining, Top
+@comment  node-name,  next,  previous,  up
+@chapter Troubleshooting
+
+Libtool is under constant development, changing to keep up-to-date with
+new operating systems.  If libtool doesn't work the way you think it
+should on your platform, you should read this chapter to help determine
+what the problem is, and how to resolve it.
+
+@menu
+* Libtool Test Suite::          Libtool's self-tests.
+* Reporting Bugs::              How to report problems with libtool.
+@end menu
+
+@node Libtool Test Suite, Reporting Bugs, Troubleshooting, Troubleshooting
+@comment  node-name,  next,  previous,  up
+@section The Libtool Test Suite
+
+Libtool comes with its own set of programs that test its capabilities,
+and report obvious bugs in the libtool program.  These tests, too, are
+constantly evolving, based on past problems with libtool, and known
+deficiencies in other operating systems.
+
+As described in the @file{INSTALL} file, you may run @kbd{make check}
+after you have built libtool (possibly before you install it) in order
+to make sure that it has the functionality demanded by the test
+programs.
+
+@menu
+* Test Descriptions::           The contents of the test suite.
+* When Tests Fail::             What to do when a test fails.
+@end menu
+
+@node Test Descriptions, When Tests Fail, Libtool Test Suite, Libtool Test Suite
+@comment  node-name,  next,  previous,  up
+@subsection Description of Test Suite
+
+Here is a list of the current programs in the test suite, and what they
+test for:
+
+@table @file
+@item demo-conf.test
+@itemx demo-exec.test
+@itemx demo-inst.test
+@itemx demo-make.test
+@itemx demo-unst.test
+These programs check to see that the @file{demo} subdirectory of the
+libtool distribution can be configured, built, installed, and
+uninstalled correctly.
+
+The @file{demo} subdirectory contains a demonstration of a trivial
+package that uses libtool.
+
+@item hardcode.test
+On all systems with shared libraries, the location of the library can be
+encoded in executables that are linked against it @pxref{Linking
+Executables}.  This test checks the conditions under which your system
+linker hardcodes the library location, and guarantees that they
+correspond to libtool's own notion of how your linker behaves.
+
+@item link.test
+This test guarantees that linking directly against a non-libtool static
+library works properly.
+
+@item link-2.test
+This test makes sure that files ending in @samp{.lo} are never linked
+directly into a program file.
+
+@item suffix.test
+When other programming languages are used with libtool (@pxref{Other
+Languages}), the source files may end in suffixes other than @samp{.c}.
+This test validates that libtool can handle suffixes for all the file
+types that it supports, and that it fails when the suffix is invalid.
+
+@item test-e.test
+This program checks that the @code{test -e} construct is @emph{never} in
+the libtool scripts.  Checking for the existence of a file can only be
+done in a portable way by using @code{test -f}.
+@end table
+
+@node When Tests Fail,  , Test Descriptions, Libtool Test Suite
+@comment  node-name,  next,  previous,  up
+@subsection When Tests Fail
+
+Each of the above tests are designed to produce no output when they are
+run via @kbd{make check}.  The exit status of each program tells the
+Makefile whether or not the test succeeded.
+
+If a test fails, it means that there is either a programming error in
+libtool, or in the test itself.
+
+To investigate a particular test, you may run it directly, as you would
+a normal program.  When the test is invoked in this way, it produces
+output which may be useful in determining what the problem is.
+
+Another way to have the test programs produce output is to set the
+@var{VERBOSE} environment variable to @samp{yes} before running them.
+For example, @kbd{make check VERBOSE=yes} runs all the tests, and has
+each of them display debugging information.
+
+@node Reporting Bugs,  , Libtool Test Suite, Troubleshooting
+@comment  node-name,  next,  previous,  up
+@section Reporting Bugs
+
+If you think you have discovered a bug in libtool, you should think
+twice: the libtool maintainer is notorious for passing the buck (or
+maybe that should be ``passing the bug'').
+
+Libtool was invented to fix known deficiencies in shared library
+implementations, so, in a way, most of the bugs in libtool are actually
+bugs in other operating systems.
+
+However, the libtool maintainer would definitely be happy to add support
+for somebody else's buggy operating system.  (I wish there was a way to
+do winking smiley-faces in texinfo).
+
+Genuine bugs in libtool include problems with shell script portability,
+documentation errors, and failures in the test suite (@pxref{Libtool
+Test Suite}).
+
+First, check the documentation and help screens to make sure that the
+behaviour you think is a problem is not already mentioned.
+
+Then, you should read the Emacs guide to reporting bugs (@pxref{Bugs, , The
+Emacs Manual, emacs.info, The Emacs Manual}).  Some of the details
+listed there are specific to Emacs, but the priciple behind them is a
+general one.
+
+Finally, send a bug report to the libtool maintainer (@value{MAINT}),
+with any appropriate @emph{facts}, such as test suite output
+(@pxref{When Tests Fail}), all the details needed to reproduce the bug,
+and a brief description of why you think the behaviour is a bug.
+
+@node Index,  , Troubleshooting, Top
 @comment  node-name,  next,  previous,  up
 @unnumbered Index
 
