--- a/THANKS
+++ b/THANKS
@@ -1,6 +1,7 @@
 Libtool would not be what it is today without the invaluable help of
 these people:
 
+Akim Demaille <demaille@inf.enst.fr>
 Bruno Haible <haible@ilog.fr>
 Charles S. Kerr <cskerr@delenn.jccbi.gov>
 Joel Cannon <cannon@alpha.centenary.edu>
